--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Manrope&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <script src="../src/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
